--- a/pom.xml
+++ b/pom.xml
@@ -37,19 +37,34 @@
 		</dependency>
 	</dependencies>
 	<build>
-    <pluginManagement>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-        </plugins>
+		<sourceDirectory>${basedir}\src\main\java</sourceDirectory>
+		<scriptSourceDirectory>${basedir}\src\main\scripts</scriptSourceDirectory>
+		<testSourceDirectory>${basedir}\src\test\java</testSourceDirectory>
+		<outputDirectory>${basedir}\target\classes</outputDirectory>
+		<testOutputDirectory>${basedir}\target\test-classes</testOutputDirectory>
+		<resources>
+			<resource>
+				<directory>${basedir}\src\main\resources</directory>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>${basedir}\src\test\resources</directory>
+			</testResource>
+		</testResources>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.1</version>
+					<configuration>
+						<source>1.7</source>
+						<target>1.7</target>
+					</configuration>
+				</plugin>
+			</plugins>
 
-    </pluginManagement>
-</build>
+		</pluginManagement>
+	</build>
 </project>
