atualizacao clientes e detalhes do cliente

--- a/src/main/resources/painel.properties
+++ b/src/main/resources/painel.properties
@@ -1,5 +1,32 @@
 #Properties
 environment=HML
 url=http://painelhml.rede.natura.net/
-login=teste0112emepon@teste.com.br
-password=inicial1
+
+login.active=teste0112emepon@teste.com
+login.active.password=inicial1
+login.inactive=teste28110833@teste.com
+login.inactive.password=inicial1
+login.cancelled=teste0112ewaras@teste.com
+login.cancelled.password=inicial1
+login.waiting=teste27111709@teste.com
+login.waiting.password=inicial1
+login.activenotaccepted=teste27111707@teste.com
+login.activenotaccepted.password=inicial1
+
+datapicker = Dezembro 2014
+semana = 4
+	
+cliente.busca = 23/08
+cliente.id = 34780590
+cliente.nome = Teste CIT
+cliente.nascimento = 23/08/1980
+cliente.compras = 4
+cliente.ultimo.pedido = 292312133
+cliente.valor.pedido = R$92,98
+
+detalhe.cliente.valor.pedido = 95.3
+detalhe.cliente.item1 = Desodorante Colônia Frescor de Pitanga Ekos
+detalhe.cliente.item2 = Sabonete em Barra Puro Vegetal Sortido Cremoso Ekos
+detalhe.cliente.item3 = Sabonete Líquido Esfoliante Maracujá Ekos
+detalhe.cliente.item4 = Sabonete em Barra Puro Vegetal Sortido Esfoliante Ekos
+detalhe.cliente.valor.item1 = 38.30
