atualizacao pedidos e detalhes do pedido

--- a/src/main/resources/painel.properties
+++ b/src/main/resources/painel.properties
@@ -13,9 +13,6 @@ login.waiting.password=inicial1
 login.activenotaccepted=teste27111707@teste.com
 login.activenotaccepted.password=inicial1
 
-datapicker = Dezembro 2014
-semana = 4
-	
 cliente.busca = 23/08
 cliente.id = 34780590
 cliente.nome = Teste CIT
@@ -24,9 +21,24 @@ cliente.compras = 4
 cliente.ultimo.pedido = 292312133
 cliente.valor.pedido = R$92,98
 
-detalhe.cliente.valor.pedido = 95.3
+detalhe.cliente.valor.pedido = 92.98
 detalhe.cliente.item1 = Desodorante Colônia Frescor de Pitanga Ekos
 detalhe.cliente.item2 = Sabonete em Barra Puro Vegetal Sortido Cremoso Ekos
 detalhe.cliente.item3 = Sabonete Líquido Esfoliante Maracujá Ekos
 detalhe.cliente.item4 = Sabonete em Barra Puro Vegetal Sortido Esfoliante Ekos
 detalhe.cliente.valor.item1 = 38.30
+
+pedido.datapicker = Março 2015
+pedido.datapicker.semana = 1
+pedido.realizado = 12
+pedido.aprovado = 2
+pedido.cancelado = 2
+pedido.conversao = 0%
+pedido.busca = 292312133
+pedido.status.label = fa fa-square text-navy SETTLE_FAILED
+pedido.status.pagamento = Pedido cancelado
+pedido.id = 292312133
+pedido.cliente = Teste CIT
+pedido.data.compra = 03/03/2015
+pedido.valor = R$92,98
+
