--- a/src/main/resources/painel.properties
+++ b/src/main/resources/painel.properties
@@ -1,9 +1,12 @@
 #Properties
 environment=HML
 url=http://painelhml.rede.natura.net/
+#url=http://alfeu:7005/login/
 
 login.active=teste0112emepon@teste.com
+#login.active=thiago2@a.com
 login.active.password=inicial1
+#login.active.password=123qwe123
 login.inactive=teste28110833@teste.com
 login.inactive.password=inicial1
 login.cancelled=teste0112ewaras@teste.com
