completando alguns testes

--- a/src/main/resources/painel.properties
+++ b/src/main/resources/painel.properties
@@ -23,25 +23,40 @@ cliente.nascimento = 23/08/1980
 cliente.compras = 4
 cliente.ultimo.pedido = 292312133
 cliente.valor.pedido = R$92,98
+cliente.coluna1 = Alertas
+cliente.coluna2 = Cliente
+cliente.coluna3 = Aniversário
+cliente.coluna4 = Compras realizadas
+cliente.coluna5 = Último pedido
+cliente.coluna6 = Valor (com frete)
+cliente.coluna7 = Ações
 
 detalhe.cliente.valor.pedido = 92.98
 detalhe.cliente.item1 = Desodorante Colônia Frescor de Pitanga Ekos
 detalhe.cliente.item2 = Sabonete em Barra Puro Vegetal Sortido Cremoso Ekos
-detalhe.cliente.item3 = Sabonete Líquido Esfoliante Maracujá Ekos
-detalhe.cliente.item4 = Sabonete em Barra Puro Vegetal Sortido Esfoliante Ekos
+detalhe.cliente.item3 = Sabonete em Barra Puro Vegetal Sortido Esfoliante Ekos
+detalhe.cliente.item4 = Sabonete Líquido Esfoliante Maracujá Ekos
 detalhe.cliente.valor.item1 = 38.30
 
 pedido.datapicker = Março 2015
 pedido.datapicker.semana = 1
-pedido.realizado = 16
+pedido.realizado = 15
 pedido.aprovado = 4
-pedido.cancelado = 2
+pedido.cancelado = 3
 pedido.conversao = 0%
 pedido.busca = 292312133
 pedido.status.label = fa fa-square text-navy SETTLE_FAILED
 pedido.status.pagamento = Pedido cancelado
-pedido.id = 292312133
 pedido.cliente = Teste CIT
 pedido.data.compra = 03/03/2015
 pedido.valor = R$92,98
+
+detalhe.pedido.busca.frete = 293446608
+detalhe.pedido.valor.frete = R$5,47
+detalhe.pedido.busca.cupom = 285340431
+detalhe.pedido.valor.cupom = R$4,57
+detalhe.pedido.label.cupom = Cupom de desconto
+
+cupom.limite = 2
+cupom.promocao = 12%
 
